syntax = "proto3";

package envoy.extensions.http.early_header_mutation.header_mutation.v3;

import "envoy/config/common/mutation_rules/v3/mutation_rules.proto";

import "udpa/annotations/status.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.http.early_header_mutation.header_mutation.v3";
option java_outer_classname = "HeaderMutationProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/http/early_header_mutation/header_mutation/v3;header_mutationv3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Default early header mutation extension]
// [#extension: envoy.http.early_header_mutation.header_mutation]

// This extension allows for early header mutation by the substitution formatter.
message HeaderMutation {
  repeated config.common.mutation_rules.v3.HeaderMutation mutations = 1
      [(validate.rules).repeated = {min_items: 1}];
}
